syntax = "proto3";
package object;
option go_package = "pb/object";

service ObjectService {
    rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {}

    rpc CreateObject(CreateObjectRequest) returns (CreateObjectResponse) {}

    rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse) {}
}

message Object {
    string id = 1;
    string content = 2;
}

message GetObjectRequest {
    string id = 1;
}

message GetObjectResponse {
    Object object = 1;
}

message CreateObjectRequest {
    Object object = 1;
}

message CreateObjectResponse {
    Object object = 1;
}

message DeleteObjectRequest {
    string id = 1;
}

message DeleteObjectResponse {}
